# memlib

./: CMakeLists.txt  README.md
ebpf/: CMakeLists.txt  common.h  memory_rw.bpf.c
examples/: example_ebpf.cpp  example_external.cpp  example_internal.cpp
include/memlib/: context.hpp  ibackend.hpp  memlib.hpp  memory.hpp  pattern.hpp  types.hpp
src/: context.cpp
src/backend/: ebpf_backend.cpp  ebpf_backend.hpp  external_backend.hpp  external_backend_linux.cpp  external_backend_linux.hpp  external_backend_macos.cpp  external_backend_macos.hpp  external_backend_windows.cpp  external_backend_windows.hpp  internal_backend.hpp  scan_utils.hpp
uefi/: CMakeLists.txt  build_uefi.py
uefi/MemlibPkg/: MemlibPkg.dec  MemlibPkg.dsc
uefi/MemlibPkg/MemlibDxe/: Hooks.c  Hooks.h  MemlibDxe.c  MemlibDxe.inf  SetServicePointer.c  SetServicePointer.h
